Nieuws toegevoegd en eerste styling aangemaakt. Daarnaast foto's toegevoegd voor de nieuwspagina

--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
     <p>Blijf op de hoogte van het laatste nieuws, aanbiedingen en tips!</p>
   </section>
 
+  <!-- Nieuws sectie -->
+  <section class="nieuws">
+    <h2>Laatste nieuws</h2>
+    <article>
+      <img src="images/image1.jpg" alt="Nieuwe auto">
+      <h3>Nieuwe modellen binnen</h3>
+      <p>Ontdek onze nieuwste modellen die deze week zijn binnengekomen.</p>
+      <span class="datum">Geplaatst op: 10 augustus 2025</span>
+    </article>
+    <article>
+      <img src="images/image2.jpg" alt="Onderhoud tips">
+      <h3>Onderhoud tips voor de zomer</h3>
+      <p>Lees onze handige tips om je auto zomerklaar te maken.</p>
+      <span class="datum">Geplaatst op: 5 augustus 2025</span>
+    </article>
+  </section>
+
   <!-- Footer -->
   <footer>
     <div class="footer-left">
